syntax = "proto3";
package blockchain;

service Blockchain {
  rpc SendTransaction(TransactionRequest) returns (TransactionResponse);
}

message Transaction {
  string sender = 1;
  string recipient = 2;
  uint64 amount = 3;
  uint64 sender_index = 4;
}

message TransactionRequest {
  Transaction transaction = 1;
}

message TransactionResponse {
  string message = 1;
}